--- a/src/pages/blog/[slug].astro
+++ b/src/pages/blog/[slug].astro
@@ -1,6 +1,7 @@
 ---
 import type { SanityDocument } from "@sanity/client";
 import SanityImage from "~/components/SanityImage.astro";
+import TableOfContents from "~/components/TableOfContents.astro";
 import PortableText from "~/components/text/PortableText.astro";
 import ProseLayout from "~/layouts/ProseLayout.astro";
 import { extractHeadings } from "~/sanity/lib/extractHeadings";
@@ -50,7 +51,6 @@ const headings = extractHeadings(post.content);
   author={post.authors?.map((author: any) => author.name).join(", ")}
   color="blue"
   annotation={post.annotation ?? "highlight"}
-  headings={headings}
 >
   {
     post.authors && post.authors.length > 0 && (
@@ -74,6 +74,7 @@ const headings = extractHeadings(post.content);
       </div>
     )
   }
+  <TableOfContents slot="toc" headings={headings} />
   <PortableText value={post.content} />
   {
     post.authors && post.authors.length > 0 && (
