--- a/src/pages/privacy.astro
+++ b/src/pages/privacy.astro
@@ -1,5 +1,6 @@
 ---
 import { getEntry, render } from "astro:content";
+import TableOfContents from "~/components/TableOfContents.astro";
 import ProseLayout from "~/layouts/ProseLayout.astro";
 
 const entry = await getEntry("policy", "privacy");
@@ -12,7 +13,7 @@ const { Content, headings } = await render(entry);
   title="Privacy"
   description="The privacy of your data—and it is your data, not ours!—is a big deal to us. Here’s the rundown of what we collect and why, when we access your information, and your rights."
   color="brown"
-  headings={headings}
 >
+  <TableOfContents headings={headings} slot="toc" />
   <Content />
 </ProseLayout>
