--- a/src/pages/terms.astro
+++ b/src/pages/terms.astro
@@ -1,5 +1,6 @@
 ---
 import { getEntry, render } from "astro:content";
+import TableOfContents from "~/components/TableOfContents.astro";
 import ProseLayout from "~/layouts/ProseLayout.astro";
 
 const entry = await getEntry("policy", "terms");
@@ -13,7 +14,7 @@ const { Content, headings } = await render(entry);
   description="All the terms that you agree to when you sign up for Namesake."
   color="brown"
   annotation="box"
-  headings={headings}
 >
+  <TableOfContents headings={headings} slot="toc" />
   <Content />
 </ProseLayout>
