Last updated date string

--- a/src/pages/guides/[slug].astro
+++ b/src/pages/guides/[slug].astro
@@ -1,14 +1,16 @@
 ---
 import type { SanityDocument } from "@sanity/client";
 import PortableText from "~/components/text/PortableText.astro";
+import TableOfContents from "~/components/TableOfContents.astro";
 import ProseLayout from "~/layouts/ProseLayout.astro";
 import { extractHeadings } from "~/sanity/lib/extractHeadings";
 import { loadQuery } from "~/sanity/lib/loadQuery";
 import dayjs from "dayjs";
 import utc from "dayjs/plugin/utc";
-import TableOfContents from "~/components/TableOfContents.astro";
+import localizedFormat from "dayjs/plugin/localizedFormat";
 
 dayjs.extend(utc);
+dayjs.extend(localizedFormat);
 
 const { slug } = Astro.params;
 
@@ -30,9 +32,9 @@ const headings = extractHeadings(guide.content);
   <TableOfContents headings={headings} slot="toc" />
   <PortableText value={guide.content} />
   <div class="date-updated">
-    Last updated{" "}
+    Last updated {" "}
     <time datetime={guide._updatedAt}>
-      {dayjs.utc(guide._updatedAt).format("MMMM DD, YYYY")}
+      {dayjs.utc(guide._updatedAt).local().format("LL [at] LT")}
     </time>
   </div>
 </ProseLayout>
