--- a/src/components/text/Costs.astro
+++ b/src/components/text/Costs.astro
@@ -53,7 +53,7 @@ const totalCosts = formatTotalCosts(costs);
     border-collapse: collapse;
     border: 0.5px solid var(--text);
     width: 100%;
-    margin-block-end: var(--space-m);
+    margin-block: var(--space-l);
     table-layout: fixed;
   }
 
