--- a/src/components/TableOfContents.astro
+++ b/src/components/TableOfContents.astro
@@ -7,27 +7,30 @@ interface Props {
 
 const { headings } = Astro.props;
 
-const showTOC = headings && headings.length > 2;
+const showTOC = headings && headings.length > 0;
 ---
 
-{
-  showTOC && (
-    <nav class="toc" aria-labelledby="tocHeader">
-      <h2 class="toc-header" id="tocHeader">
-        On this page
-      </h2>
-      <table-of-contents>
-        <ul>
-          {headings.map(({ depth, slug, text }) => (
-            <li style={"--depth: " + depth}>
-              <a href={`#${slug}`}>{text}</a>
-            </li>
-          ))}
-        </ul>
-      </table-of-contents>
-    </nav>
-  )
-}
+<section class="toc">
+  <slot />
+  {
+    showTOC && (
+      <nav aria-labelledby="tocHeader">
+        <h2 class="toc-header" id="tocHeader">
+          On this page
+        </h2>
+        <table-of-contents>
+          <ul>
+            {headings.map(({ depth, slug, text }) => (
+              <li style={"--depth: " + depth}>
+                <a href={`#${slug}`}>{text}</a>
+              </li>
+            ))}
+          </ul>
+        </table-of-contents>
+      </nav>
+    )
+  }
+</section>
 
 <script>
   import { annotate } from "rough-notation";
@@ -134,6 +137,14 @@ const showTOC = headings && headings.length > 2;
 </script>
 
 <style>
+  .toc {
+    margin-block-start: var(--space-xs);
+    padding-block-end: var(--space-l);
+    display: flex;
+    flex-direction: column;
+    gap: var(--space-xl);
+  }
+
   h2 {
     font-size: var(--step-0);
   }
@@ -141,7 +152,7 @@ const showTOC = headings && headings.length > 2;
   ul {
     list-style-type: none;
     padding-inline-start: 0;
-    padding-block: var(--space-l);
+    padding-block-start: var(--space-l);
     display: flex;
     flex-flow: column;
     gap: var(--space-2xs);
