--- a/src/components/text/PortableTextImage.astro
+++ b/src/components/text/PortableTextImage.astro
@@ -1,7 +1,23 @@
 ---
+import { PortableText as PortableTextInternal } from "astro-portabletext";
 import SanityImage from "../SanityImage.astro";
 
-const { asset, alt } = Astro.props.node;
+const { asset, alt, caption, width } = Astro.props.node;
 ---
 
-<SanityImage asset={asset} alt={alt} />
+<figure>
+  <SanityImage
+    asset={asset}
+    alt={alt}
+    options={{
+      width,
+    }}
+  />
+  {
+    caption && (
+      <figcaption>
+        <PortableTextInternal value={caption} />
+      </figcaption>
+    )
+  }
+</figure>
