--- a/src/components/react/common/Form/Form.css
+++ b/src/components/react/common/Form/Form.css
@@ -1,9 +1,8 @@
-
 .react-aria-Form {
   display: flex;
   flex-direction: column;
   align-items: start;
-  gap: 8px;
+  gap: var(--space-s);
 }
 
 .react-aria-Form [role="alert"] {
@@ -29,9 +28,14 @@
 }
 
 .react-aria-Label {
+  display: inline-block;
   color: var(--text-color);
-  margin-bottom: 0.5em;
+  margin-bottom: var(--space-2xs);
   font-size: var(--step--1);
+
+  &:has(~ [data-focused]) {
+    font-weight: var(--weight-bold);
+  }
 }
 
 .react-aria-FieldError {
