--- a/src/components/react/common/ToggleButtonGroup/ToggleButtonGroup.css
+++ b/src/components/react/common/ToggleButtonGroup/ToggleButtonGroup.css
@@ -24,12 +24,12 @@
     margin-inline-start: -1px;
 
     &:first-child {
-      border-radius: 4px 0 0 4px;
+      border-radius: var(--radius-2xs) 0 0 var(--radius-2xs);
       margin-inline-start: 0;
     }
 
     &:last-child {
-      border-radius: 0 4px 4px 0;
+      border-radius: 0 var(--radius-2xs) var(--radius-2xs) 0;
     }
   }
 }
@@ -42,12 +42,12 @@
     margin-block-start: -1px;
 
     &:first-child {
-      border-radius: 4px 4px 0 0;
+      border-radius: var(--radius-2xs) var(--radius-2xs) 0 0;
       margin-block-start: 0;
     }
 
     &:last-child {
-      border-radius: 0 0 4px 4px;
+      border-radius: 0 0 var(--radius-2xs) var(--radius-2xs);
     }
   }
 }
