--- a/src/components/react/common/Tooltip/Tooltip.css
+++ b/src/components/react/common/Tooltip/Tooltip.css
@@ -2,8 +2,8 @@
 .react-aria-Tooltip {
   box-shadow: 0 8px 20px rgba(0 0 0 / 0.1);
   border-radius: var(--radius-xs);
-  background: var(--overlay-background);
-  color: var(--text-color);
+  background: var(--highlight-background);
+  color: var(--highlight-foreground);
   forced-color-adjust: none;
   outline: none;
   padding: var(--space-2xs) var(--space-s);
@@ -22,17 +22,17 @@
   }
 
   &[data-placement="top"] {
-    margin-bottom: 8px;
+    margin-bottom: var(--space-s);
     --origin: translateY(4px);
   }
 
   & .react-aria-OverlayArrow svg {
     display: block;
-    fill: var(--overlay-background);
+    fill: var(--highlight-background);
   }
 
   &[data-placement="bottom"] {
-    margin-top: 8px;
+    margin-top: var(--space-s);
     --origin: translateY(-4px);
     & .react-aria-OverlayArrow svg {
       transform: rotate(180deg);
@@ -40,7 +40,7 @@
   }
 
   &[data-placement="right"] {
-    margin-left: 8px;
+    margin-left: var(--space-s);
     --origin: translateX(-4px);
     & .react-aria-OverlayArrow svg {
       transform: rotate(90deg);
@@ -48,7 +48,7 @@
   }
 
   &[data-placement="left"] {
-    margin-right: 8px;
+    margin-right: var(--space-s);
     --origin: translateX(4px);
     & .react-aria-OverlayArrow svg {
       transform: rotate(-90deg);
