--- a/src/components/react/common/Checkbox/Checkbox.css
+++ b/src/components/react/common/Checkbox/Checkbox.css
@@ -14,8 +14,8 @@
   .checkbox {
     width: var(--space-xl);
     height: var(--space-xl);
-    border: 2px solid var(--border-color);
-    border-radius: 4px;
+    border: 1px solid var(--border-color);
+    border-radius: var(--radius-2xs);
     display: flex;
     align-items: center;
     justify-content: center;
@@ -25,6 +25,7 @@
   svg {
     width: 75%;
     height: 75%;
+    transform: translateY(-0.5px) translateX(1px);
     fill: none;
     stroke: var(--checkmark-color);
     stroke-width: 2;
