--- a/src/components/react/common/Form/Form.css
+++ b/src/components/react/common/Form/Form.css
@@ -33,7 +33,8 @@
   margin-bottom: var(--space-2xs);
   font-size: var(--step--1);
 
-  &:has(~ [data-focused]) {
+  &:has(~ [data-focused]),
+  &:has(~ [data-focus-within]) {
     font-weight: var(--weight-bold);
   }
 }
