--- a/src/components/react/common/CheckboxGroup/CheckboxGroup.css
+++ b/src/components/react/common/CheckboxGroup/CheckboxGroup.css
@@ -6,6 +6,8 @@
   color: var(--text-color);
 
   [slot="description"] {
-    font-size: var(--step--1);
+    display: block;
+    margin-top: var(--space-2xs);
+    font-size: var(--step--2);
   }
 }
