--- a/src/components/react/common/ComboBox/ComboBox.css
+++ b/src/components/react/common/ComboBox/ComboBox.css
@@ -99,6 +99,8 @@
   }
 
   [slot="description"] {
-    font-size: var(--step--1);
+    display: block;
+    margin-top: var(--space-2xs);
+    font-size: var(--step--2);
   }
 }
