--- a/src/components/react/common/DateField/DateField.css
+++ b/src/components/react/common/DateField/DateField.css
@@ -67,7 +67,9 @@
   }
 
   [slot="description"] {
-    font-size: var(--step--1);
+    display: block;
+    margin-top: var(--space-2xs);
+    font-size: var(--step--2);
   }
 }
 
