--- a/src/components/react/common/DatePicker/DatePicker.css
+++ b/src/components/react/common/DatePicker/DatePicker.css
@@ -22,7 +22,9 @@
   }
 
   [slot="description"] {
-    font-size: var(--step--1);
+    display: block;
+    margin-top: var(--space-2xs);
+    font-size: var(--step--2);
   }
 }
 
