--- a/src/components/react/common/DateRangePicker/DateRangePicker.css
+++ b/src/components/react/common/DateRangePicker/DateRangePicker.css
@@ -63,7 +63,9 @@
   }
 
   [slot="description"] {
-    font-size: var(--step--1);
+    display: block;
+    margin-top: var(--space-2xs);
+    font-size: var(--step--2);
   }
 }
 
