--- a/src/components/react/common/Menu/Menu.css
+++ b/src/components/react/common/Menu/Menu.css
@@ -81,7 +81,9 @@
   }
 
   [slot="description"] {
-    font-size: small;
+    display: block;
+    margin-top: var(--space-2xs);
+    font-size: var(--step--2);
     grid-area: desc;
   }
 
