--- a/src/components/react/common/NumberField/NumberField.css
+++ b/src/components/react/common/NumberField/NumberField.css
@@ -63,12 +63,14 @@
   }
 
   .react-aria-FieldError {
-    font-size: 12px;
+    font-size: var(--step--1);
     color: var(--invalid-color);
   }
 
   [slot="description"] {
-    font-size: 12px;
+    display: block;
+    margin-top: var(--space-2xs);
+    font-size: var(--step--2);
   }
 
   .react-aria-Button {
