--- a/src/components/react/common/Select/Select.css
+++ b/src/components/react/common/Select/Select.css
@@ -15,7 +15,9 @@
   }
 
   [slot="description"] {
-    font-size: var(--step--1);
+    display: block;
+    margin-top: var(--space-2xs);
+    font-size: var(--step--2);
   }
 
   .react-aria-SelectValue {
