Fix costs and styles bugs on Safari

--- a/src/components/text/Costs.astro
+++ b/src/components/text/Costs.astro
@@ -50,8 +50,8 @@ const totalCosts = formatTotalCosts(costs);
 
 <style>
   table {
-    border-collapse: collapse;
-    border: 0.5px solid var(--text-color);
+    border: 0.5px solid var(--border-color);
+    border-spacing: 0;
     width: 100%;
     margin-block: var(--space-l);
     table-layout: fixed;
