--- a/src/layouts/ProseLayout.astro
+++ b/src/layouts/ProseLayout.astro
@@ -127,6 +127,7 @@ const headerDescription =
       "toc"
       "prose"
       "bios";
+
     @media (width >= 900px) {
       grid-template-columns: 3fr 1fr;
       grid-template-areas:
@@ -153,6 +154,7 @@ const headerDescription =
 
     .toc {
       grid-area: toc;
+      margin-block-end: var(--space-m);
     }
 
     .authors {
