--- a/src/components/text/Details.astro
+++ b/src/components/text/Details.astro
@@ -1,6 +1,6 @@
 ---
 import { PortableText as PortableTextInternal } from "astro-portabletext";
-import { smartquotes } from "~/helpers/helpers";
+import { smartquotes } from "~/utils/smartquotes";
 
 const { summary, content } = Astro.props.node;
 ---
