--- a/src/components/text/Text.astro
+++ b/src/components/text/Text.astro
@@ -1,6 +1,6 @@
 ---
 import type { TextNodeProps } from "astro-portabletext/types";
-import { smartquotes } from "~/helpers/helpers";
+import { smartquotes } from "~/utils/smartquotes";
 
 export type Props = TextNodeProps;
 ---
