--- a/src/layouts/ProseLayout.astro
+++ b/src/layouts/ProseLayout.astro
@@ -2,9 +2,9 @@
 import type { SanityAssetDocument } from "@sanity/client";
 import type { RoughAnnotationType } from "rough-notation/lib/model";
 import PageHeader from "~/components/PageHeader.astro";
-import type { NamesakeColor } from "~/data/colors";
+import type { NamesakeColor } from "~/constants/colors";
 import { urlForImage } from "~/sanity/lib/urlForImage";
-import { smartquotes } from "../helpers/helpers";
+import { smartquotes } from "~/utils/smartquotes";
 import BaseLayout from "./BaseLayout.astro";
 
 interface Props {
