--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -7,7 +7,7 @@ import type { SanityDocument } from "@sanity/client";
 import Partners from "~/components/Partners.astro";
 import SupportMap from "~/components/SupportMap.astro";
 import PortableText from "~/components/text/PortableText.astro";
-import siteInfo from "~/data/site-info";
+import siteInfo from "~/constants/site-info";
 import BaseLayout from "~/layouts/BaseLayout.astro";
 import heroIllustration from "~/pages/home/_hero-form.png";
 import { loadQuery } from "~/sanity/lib/loadQuery";
