--- a/src/components/react/common/CheckboxGroup/CheckboxGroup.css
+++ b/src/components/react/common/CheckboxGroup/CheckboxGroup.css
@@ -6,7 +6,7 @@
   .checkbox-items {
     display: flex;
     flex-direction: column;
-    gap: var(--space-xs);
+    gap: var(--space-s);
     align-items: flex-start;
 
     &:not(:first-child) {
