--- a/src/components/react/common/Banner/Banner.css
+++ b/src/components/react/common/Banner/Banner.css
@@ -8,7 +8,8 @@
   .banner-icon {
     background-color: var(--highlight-background);
     color: var(--highlight-foreground);
-    padding: var(--space-s) var(--space-2xs);
+    padding-block: var(--space-s);
+    width: calc(var(--space-2xl) - 1px);
     display: flex;
     align-items: center;
     justify-content: center;
@@ -36,5 +37,6 @@
 .banner-content {
   font-size: var(--step-0);
   flex: 1;
-  padding: var(--space-s) var(--space-m);
+  padding: var(--space-s);
+  padding-inline-end: var(--space-m);
 }
