--- a/src/components/react/forms/LongTextField/LongTextField.css
+++ b/src/components/react/forms/LongTextField/LongTextField.css
@@ -1,6 +1,6 @@
 .namesake-long-text-field {
   display: flex;
   flex-direction: column;
-  gap: var(--space-m);
+  gap: var(--space-s);
   width: 100%;
 }
