--- a/src/components/text/YouTube.astro
+++ b/src/components/text/YouTube.astro
@@ -1,5 +1,5 @@
 ---
-import { YouTube as YouTubeEmbed } from "astro-embed";
+import { YouTube as YouTubeEmbed } from "@astro-community/astro-embed-youtube";
 
 const { url } = Astro.props.node;
 ---
