--- a/src/pages/forms/social-security/index.astro
+++ b/src/pages/forms/social-security/index.astro
@@ -20,7 +20,7 @@ const { data: form } = await loadQuery<SanityDocument>({
 
 <BaseLayout title={form.title} description={form.description} color="white">
   <SocialSecurityForm
-    client:load
+    client:only="react"
     title={form.title}
     description={form.description}
   />
