--- a/src/components/react/common/Table/Table.css
+++ b/src/components/react/common/Table/Table.css
@@ -9,7 +9,7 @@
   word-break: break-word;
   forced-color-adjust: none;
 
-  &:is(div) {
+  &div {
     padding: 0;
   }
 
@@ -110,7 +110,7 @@
     outline: none;
     box-sizing: border-box;
 
-    &:is(div) {
+    &div {
       display: flex;
       align-items: center;
       height: 100%;
