--- a/src/components/react/common/NumberField/NumberField.css
+++ b/src/components/react/common/NumberField/NumberField.css
@@ -13,7 +13,7 @@
     flex: 1;
   }
 
-  .react-aria-Button {
+  .namesake-button {
     font-size: var(--step-0);
     width: var(--space-2xl);
     padding: 0;
@@ -31,12 +31,21 @@
       border-start-start-radius: 0;
       border-end-start-radius: 0;
     }
+
+    @media (hover: hover) {
+      &:hover {
+        transform: none;
+      }
+      &:active {
+        transform: none;
+      }
+    }
   }
 
   .react-aria-Group {
     display: flex;
     width: fit-content;
-    border-radius: var(--radius-xs);
+    border-radius: var(--radius-s);
 
     &[data-focus-within] {
       outline: 1px solid var(--focus-ring-color);
