--- a/src/components/react/common/SearchField/SearchField.css
+++ b/src/components/react/common/SearchField/SearchField.css
@@ -16,7 +16,7 @@
     padding: var(--space-xs) var(--space-xl) var(--space-xs) var(--space-xs);
     margin: 0;
     border: 1px solid var(--border-color);
-    border-radius: 6px;
+    border-radius: var(--radius-s);
     background: var(--field-background);
     font-size: var(--step-0);
     color: var(--field-text-color);
