--- a/src/components/react/common/Switch/Switch.css
+++ b/src/components/react/common/Switch/Switch.css
@@ -4,25 +4,24 @@
   position: relative;
   align-items: center;
   gap: var(--space-s);
-  font-size: var(--step--1);
+  font-size: var(--step-0);
   color: var(--text-color);
   forced-color-adjust: none;
   overflow: hidden;
 
   .indicator {
-    width: calc(var(--space-l) * 2);
-    height: var(--space-l);
-    border: 2px solid var(--border-color);
-    background: var(--field-background);
+    width: calc(var(--space-xl) * 2);
+    height: var(--space-xl);
+
+    background: color-mix(in srgb, var(--border-color) 15%, transparent);
     border-radius: var(--radius-l);
     transition: all 200ms;
 
     &:before {
       content: "";
       display: block;
-      margin: -2px;
-      width: var(--space-l);
-      height: var(--space-l);
+      width: var(--space-xl);
+      height: var(--space-xl);
       background: var(--field-background);
       border: 2px solid var(--border-color);
       border-radius: 16px;
