--- a/src/components/react/common/ToggleButtonGroup/ToggleButtonGroup.css
+++ b/src/components/react/common/ToggleButtonGroup/ToggleButtonGroup.css
@@ -23,12 +23,12 @@
     margin-inline-start: -1px;
 
     &:first-child {
-      border-radius: var(--radius-2xs) 0 0 var(--radius-2xs);
+      border-radius: var(--radius-xs) 0 0 var(--radius-xs);
       margin-inline-start: 0;
     }
 
     &:last-child {
-      border-radius: 0 var(--radius-2xs) var(--radius-2xs) 0;
+      border-radius: 0 var(--radius-xs) var(--radius-xs) 0;
     }
   }
 }
@@ -41,12 +41,12 @@
     margin-block-start: -1px;
 
     &:first-child {
-      border-radius: var(--radius-2xs) var(--radius-2xs) 0 0;
+      border-radius: var(--radius-xs) var(--radius-xs) 0 0;
       margin-block-start: 0;
     }
 
     &:last-child {
-      border-radius: 0 0 var(--radius-2xs) var(--radius-2xs);
+      border-radius: 0 0 var(--radius-xs) var(--radius-xs);
     }
   }
 }
