--- a/src/components/react/common/Button/Button.css
+++ b/src/components/react/common/Button/Button.css
@@ -55,7 +55,8 @@
     cursor: pointer;
   }
 
-  svg {
+  .namesake-button-start-icon:has(~ *),
+  .namesake-button-end-icon:has(~ *) {
     margin-inline: -0.2em;
     flex-shrink: 0;
   }
