--- a/src/components/react/common/Calendar/Calendar.css
+++ b/src/components/react/common/Calendar/Calendar.css
@@ -16,10 +16,10 @@
     }
   }
 
-  .react-aria-Button[slot="previous"],
-  .react-aria-Button[slot="next"] {
-    width: 1.75rem;
-    height: 1.75rem;
+  .namesake-button[slot="previous"],
+  .namesake-button[slot="next"] {
+    width: var(--space-2xl);
+    height: var(--space-2xl);
     padding: 0;
   }
 
