--- a/src/components/react/common/GridList/GridList.css
+++ b/src/components/react/common/GridList/GridList.css
@@ -23,14 +23,14 @@
   .react-aria-GridListItem {
     display: flex;
     align-items: center;
-    gap: var(--space-xs);
+    gap: var(--space-s);
     min-height: 28px;
     padding: var(--space-2xs) var(--space-2xs) var(--space-2xs) var(--space-s);
-    border-radius: 6px;
+    border-radius: var(--radius-xs);
     outline: none;
     cursor: default;
     color: var(--text-color);
-    font-size: var(--step--1);
+    font-size: var(--step-0);
     position: relative;
     transform: translateZ(0);
 
