Fix storybook build (#285)

--- a/src/components/react/common/NumberField/NumberField.css
+++ b/src/components/react/common/NumberField/NumberField.css
@@ -7,16 +7,15 @@
     margin: 0 -1px;
     z-index: 1;
     font-size: var(--step-0);
-    padding: var(--space-2xs) var(--space-xs);
+    padding: var(--space-s) var(--space-2xl) var(--space-s) var(--space-s);
     outline: none;
     width: 7ch;
     flex: 1;
   }
 
-  .react-aria-Button {
+  .namesake-button {
     font-size: var(--step-0);
-    width: var(--space-2xl);
-    padding: 0;
+    padding-inline: var(--space-s);
     display: inline-flex;
     align-items: center;
     justify-content: center;
@@ -31,17 +30,26 @@
       border-start-start-radius: 0;
       border-end-start-radius: 0;
     }
+
+    @media (hover: hover) {
+      &:hover {
+        transform: none;
+      }
+      &:active {
+        transform: none;
+      }
+    }
   }
 
   .react-aria-Group {
     display: flex;
     width: fit-content;
-    border-radius: var(--radius-xs);
+    border-radius: var(--radius-s);
 
     &[data-focus-within] {
       outline: 1px solid var(--focus-ring-color);
       .react-aria-Input,
-      .react-aria-Button {
+      .namesake-button {
         border-color: var(--focus-ring-color);
       }
     }
@@ -49,13 +57,13 @@
 
   &[data-invalid] {
     .react-aria-Input,
-    .react-aria-Button {
+    .namesake-button {
       border-color: var(--invalid-color);
     }
 
     &:focus-within {
       .react-aria-Input,
-      .react-aria-Button {
+      .namesake-button {
         border-color: var(--focus-ring-color);
       }
     }
@@ -72,7 +80,7 @@
     font-size: var(--step--2);
   }
 
-  .react-aria-Button {
+  .namesake-button {
     &[data-disabled] {
       border-color: var(--border-color-disabled);
       color: var(--text-color-disabled);
