Update field styles

--- a/src/components/react/common/DateField/DateField.css
+++ b/src/components/react/common/DateField/DateField.css
@@ -12,12 +12,12 @@
 
 .react-aria-DateInput {
   display: inline;
-  padding: var(--space-s);
+  padding: var(--space-s) var(--space-m);
   border: 1px solid var(--border-color);
   border-radius: var(--radius-xs);
   background: var(--field-background);
   width: fit-content;
-  min-width: 150px;
+  min-width: 15ch;
   white-space: nowrap;
   forced-color-adjust: none;
 
