--- a/src/components/react/common/ComboBox/ComboBox.css
+++ b/src/components/react/common/ComboBox/ComboBox.css
@@ -13,7 +13,8 @@
     color: var(--field-text-color);
     border: 1px solid var(--border-color);
     border-radius: var(--radius-xs);
-    padding: var(--space-s) var(--space-2xl) var(--space-s) var(--space-s);
+    box-shadow: inset 0 3px 0 0 color-mix(in srgb, var(--namesake-black) 10%, transparent);
+    padding: var(--space-s) var(--space-2xl) var(--space-s) var(--space-m);
     vertical-align: middle;
     outline: none;
     min-width: 0;
