--- a/src/components/react/common/TextArea/TextArea.css
+++ b/src/components/react/common/TextArea/TextArea.css
@@ -5,11 +5,12 @@
   color: var(--text-color);
 
   .react-aria-TextArea {
-    padding: var(--space-s);
+    padding: calc(var(--space-s) + 2px) var(--space-m);
     margin: 0;
     border: 1px solid var(--border-color);
     border-radius: var(--radius-xs);
     background: var(--field-background);
+    box-shadow: inset 0 3px 0 0 color-mix(in srgb, var(--namesake-black) 10%, transparent);
     font-size: var(--step-0);
     color: var(--field-text-color);
     width: 100%;
