--- a/src/components/react/common/TextField/TextField.css
+++ b/src/components/react/common/TextField/TextField.css
@@ -9,7 +9,8 @@
     margin: 0;
     border: 1px solid var(--border-color);
     border-radius: var(--radius-xs);
-    box-shadow: inset 0 3px 0 0 color-mix(in srgb, var(--namesake-black) 10%, transparent);
+    box-shadow: inset 0 3px 0 0
+      color-mix(in srgb, var(--namesake-black) 10%, transparent);
     background: var(--field-background);
     font-size: var(--step-0);
     color: var(--field-text-color);
