--- a/src/components/react/common/DateField/DateField.css
+++ b/src/components/react/common/DateField/DateField.css
@@ -16,6 +16,8 @@
   border: 1px solid var(--border-color);
   border-radius: var(--radius-xs);
   background: var(--field-background);
+  box-shadow: inset 0 3px 0 0
+    color-mix(in srgb, var(--namesake-black) 10%, transparent);
   width: fit-content;
   min-width: 15ch;
   white-space: nowrap;
