--- a/src/components/react/common/Popover/Popover.css
+++ b/src/components/react/common/Popover/Popover.css
@@ -6,11 +6,10 @@
   border-radius: var(--radius-s);
   background: var(--overlay-background);
   border: none;
-  box-shadow:
-    0 0 0 3px var(--border-color),
-    8px 8px 0 0 color-mix(in srgb, var(--border-color) 20%, transparent);
+  box-shadow: 8px 8px 0 0
+    color-mix(in srgb, var(--border-color) 20%, transparent);
   color: var(--text-color);
-  outline: none;
+  outline: 3px solid var(--border-color);
   max-width: 250px;
   transition:
     transform 200ms,
@@ -21,7 +20,7 @@
     display: block;
     fill: var(--overlay-background);
     stroke: var(--border-color);
-    stroke-width: 2;
+    stroke-width: 3;
   }
 
   &[data-entering],
