--- a/src/pages/forms/done.astro
+++ b/src/pages/forms/done.astro
@@ -4,7 +4,7 @@ import ProseLayout from "@/layouts/ProseLayout.astro";
 ---
 
 <ProseLayout
-  title="Downloaded!"
+  title="Check your downloads"
   description="Your name change packet has downloaded. Review, print, and follow steps for filing."
   color="green"
   annotation="underline"
